# Alfred-TUI

./: .gitignore  README.md  TEST_INSTANCE.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  session-ses_1a56.md  spec.md
alfred/: __main__.py  api.py  app.py  mcp_server.py  poller.py  state.py  workspace.py
alfred/tui/: app.py  dummy_data.py  screens.py  themes.py
scripts/: mcp_test.py  setup_demo.py  shell_hook.sh  uninstall.sh
