[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfred"
version = "0.1.0"
description = "Headless CTF workspace engine — TUI + API client for CTFd"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "textual>=1.0",
]

[project.scripts]
alfred = "alfred.app:main"

[tool.hatch.build.targets.wheel]
packages = ["alfred"]
